# 2manybootlegs

./: .copilotrc  .gitignore  LICENSE  README.md  pyproject.toml
listomania/: cache_and_validate.py  main.py
