[project]
name = "my_project"
version = "0.1.0"
description = "listomania - a tool for managing lists of things"
authors = [
    { name="Ben Giles", email="btgiles@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "typer>=0.16.0",
    "rich>=14.0.0"
]


